--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103-luckfox-pico-plus-ipc.dtsi
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103-luckfox-pico-plus-ipc.dtsi
@@ -285,18 +285,18 @@
 //	};
 //};
 
-//&sdmmc {
-//	max-frequency = <50000000>;
-//	no-sdio;
-//	no-mmc;
-//	bus-width = <4>;
-//	cap-mmc-highspeed;
-//	cap-sd-highspeed;
-//	disable-wp;
-//	pinctrl-names = "default";
-//	pinctrl-0 = <&sdmmc0_clk &sdmmc0_cmd &sdmmc0_det &sdmmc0_bus4>;
-//	status = "okay";
-//};
+&sdmmc {
+	max-frequency = <50000000>;
+	no-sdio;
+	no-mmc;
+	bus-width = <4>;
+	cap-mmc-highspeed;
+	cap-sd-highspeed;
+	disable-wp;
+	pinctrl-names = "default";
+	pinctrl-0 = <&sdmmc0_clk &sdmmc0_cmd &sdmmc0_det &sdmmc0_bus4>;
+	status = "okay";
+};
 
 &tsadc {
 	status = "okay";
