fix iperf3 build and lib

--- a/sysdrv/tools/board/toolkits/iperf3/Makefile
+++ b/sysdrv/tools/board/toolkits/iperf3/Makefile
@@ -17,13 +17,24 @@ endif
 
 PKG_BIN := out
 
+
+PKG_DEP_ZLIB := $(CURRENT_DIR)/../zlib
+PKG_DEP_OPENSSL := $(CURRENT_DIR)/../openssl
+
+PKG_CONF_OPTS += $(SYSDRV_OPTS) -Os \
+				 -I $(PKG_DEP_OPENSSL)/out/include \
+				 -L$(PKG_DEP_OPENSSL)/out/lib \
+				 -I $(PKG_DEP_ZLIB)/out/include \
+				 -L$(PKG_DEP_ZLIB)/out/lib \
+				 -lz
+
 all:
 	@test -f $(CURRENT_DIR)/$(PKG_BIN)/bin/iperf3 ||(\
 	tar -xf ${PKG_TARBALL_IPERF3}; \
 	mkdir -p $(CURRENT_DIR)/$(PKG_BIN); \
 	pushd $(CURRENT_DIR)/$(PKG_NAME_IPERF3)/; \
-		CFLAGS="$(PKG_CONF_OPTS)" CPPFLAGS="$(PKG_CONF_OPTS)" \
-		CXXFLAGS="$(PKG_CONF_OPTS)" LDFLAGS="$(PKG_CONF_OPTS)" \
+			CFLAGS="$(PKG_CONF_OPTS)" CPPFLAGS="$(PKG_CONF_OPTS)" \
+			CXXFLAGS="$(PKG_CONF_OPTS)" LDFLAGS="$(PKG_CONF_OPTS)" \
 			./configure \
 			--host=$(SYSDRV_CROSS) \
 			--prefix=$(CURRENT_DIR)/$(PKG_BIN) \
@@ -32,6 +43,7 @@ all:
 		make install > /dev/null; \
 		$(SYSDRV_CROSS)-strip $(CURRENT_DIR)/$(PKG_BIN)/bin/iperf3; \
 	popd; )
+	cp -rfp $(CURRENT_DIR)/$(PKG_BIN)/bin/iperf3  $(SYSDRV_DIR_OUT_ROOTFS)/usr/bin
 
 distclean:
 	-rm -rf $(PKG_BIN) $(PKG_NAME_IPERF3)
