--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
@@ -180,11 +180,11 @@
 };
 
 /**********UART**********/
-&uart3 {
-	status = "okay";
-	pinctrl-names = "default";
-	pinctrl-0 = <&uart3m1_xfer>;
-};
+//&uart3 {
+//	status = "okay";
+//	pinctrl-names = "default";
+//	pinctrl-0 = <&uart3m1_xfer>;
+//};
 &uart4 {
 	status = "okay";
 	pinctrl-names = "default";
