toolkits:up to openssl3

--- a/sysdrv/tools/board/toolkits/Makefile
+++ b/sysdrv/tools/board/toolkits/Makefile
@@ -20,7 +20,7 @@ PKG_DEP_ZLIB := ./zlib
 PKG_DEP_IPERF3 := ./iperf3
 PKG_DEP_PICOCOM := ./picocom
 
-all:dep_zlib dep_openssl tool_iperf3 tool_picocom
+all:dep_openssl tool_iperf3 tool_picocom
 
 tool_io:
 	rm -rf $(PKG_BIN)/io;
