--- a/sysdrv/tools/board/toolkits/libexpat/Makefile
+++ b/sysdrv/tools/board/toolkits/libexpat/Makefile
@@ -1,17 +1,18 @@
 SYSDRV_ARCH_TYPE=arm
 SYSDRV_CROSS=arm-rockchip830-linux-uclibcgnueabihf
 
+
 export LC_ALL=C
 SHELL:=/bin/bash
 CURRENT_DIR := $(shell pwd)
 
-BUILD_TARGET := ${CURRENT_DIR}/libnl-3.8.0.tar.gz
-BUILD_TARGET_DIR := ${CURRENT_DIR}/libnl-3.8.0
+BUILD_TARGET := ${CURRENT_DIR}/expat-2.5.0.tar.gz
+BUILD_TARGET_DIR := ${CURRENT_DIR}/expat-2.5.0
 BUILD_TARGET_OUT := ${CURRENT_DIR}/out
 
 
 all:
-	@test -f $(BUILD_TARGET_OUT)/lib/libnl-3.so || ( \
+	@test -f $(BUILD_TARGET_OUT)/lib/libexpat.so || ( \
 		-rm -rf $(BUILD_TARGET_DIR) ${BUILD_TARGET_OUT}; \
 		tar -xf ${BUILD_TARGET}; \
 		mkdir ${BUILD_TARGET_OUT}; \
@@ -22,4 +23,4 @@ all:
 		popd;)
 
 clean:
-	-rm -rf $(BUILD_TARGET_DIR) ${BUILD_TARGET_OUT}
+	-rm -rf ${BUILD_TARGET_DIR} ${BUILD_TARGET_OUT}
