wpa_supplicant build

--- a/sysdrv/tools/board/toolkits/wpa_supplicant/Makefile
+++ b/sysdrv/tools/board/toolkits/wpa_supplicant/Makefile
@@ -14,14 +14,21 @@ BUILD_TARGET := ${CURRENT_DIR}/wpa_supplicant-2.10.tar.gz
 BUILD_TARGET_DIR := ${CURRENT_DIR}/wpa_supplicant-2.10/wpa_supplicant/
 BUILD_TARGET_OUT := ${CURRENT_DIR}/out
 
-PKG_CONFIG_PATH2=${PKG_LIB_DBUS}/out/lib/pkgconfig:${PKG_LIB_NL}/out/lib/pkgconfig
+PKG_CONFIG_PATH3=${PKG_LIB_DBUS}/out/lib/pkgconfig:${PKG_LIB_NL}/out/lib/pkgconfig:${PKG_LIB_OPENSSL}/out3/lib/pkgconfig
 
-all: lib_dbus lib_nl
+all: lib_dbus lib_nl lib_openssl
 	( \
+		cp defconfig ${BUILD_TARGET_DIR}/.config; \
 		pushd $(BUILD_TARGET_DIR)/; \
-		export PKG_CONFIG_PATH=${PKG_CONFIG_PATH2}; \
-		echo ${PKG_CONFIG_PATH}; \
-		${MAKE} -C ${BUILD_TARGET_DIR}; \
+		export PKG_CONFIG_PATH="${PKG_CONFIG_PATH3}"; \
+		echo "LIBS += -L${PKG_LIB_DBUS}/out/lib" >> .config; \
+		echo "LIBS += -L${PKG_LIB_NL}/out/lib" >> .config; \
+		echo "LIBS += -L${PKG_LIB_OPENSSL}/out3/lib" >> .config; \
+		echo "CFLAGS += -I${PKG_LIB_OPENSSL}/out3/include" >> .config; \
+		echo "CFLAGS += -I${PKG_LIB_NL}/out/include" >> .config; \
+		echo "CFLAGS += -I${PKG_LIB_DBUS}/out/include" >> .config; \
+		echo "CC=${SYSDRV_CROSS}-gcc" >> .config; \
+		${MAKE} -C ${BUILD_TARGET_DIR} PKG_CONFIG_PATH=${PKG_CONFIG_PATH3}; \
 	popd;)
 
 lib_dbus:lib_expat
@@ -33,7 +40,11 @@ lib_nl:
 lib_expat:
 	$(MAKE) -C ${PKG_LIB_EXPAT}
 
-clean:
+lib_openssl:
+	$(MAKE) -C ${PKG_LIB_OPENSSL}
+
+distclean:
+	-rm -rf ${BUILD_TARGET_DIR} ${BUILD_TARGET_OUT}
 	$(MAKE) -C ${PKG_LIB_EXPAT}	clean
 	$(MAKE) -C ${PKG_LIB_DBUS} clean
 	$(MAKE) -C ${PKG_LIB_NL} clean
