finish build wpa_supplicant

--- a/sysdrv/tools/board/toolkits/Makefile
+++ b/sysdrv/tools/board/toolkits/Makefile
@@ -19,8 +19,9 @@ PKG_DEP_OPENSSL := ./openssl
 PKG_DEP_ZLIB := ./zlib
 PKG_DEP_IPERF3 := ./iperf3
 PKG_DEP_PICOCOM := ./picocom
+PKG_DEP_WPA_SUPPLICANT := ./wpa_supplicant
 
-all:dep_openssl tool_iperf3 tool_picocom
+all:dep_openssl tool_iperf3 tool_picocom tool_wpa_supplicant
 
 tool_io:
 	rm -rf $(PKG_BIN)/io;
@@ -28,6 +29,9 @@ tool_io:
 	$(SYSDRV_CROSS)-gcc $(PKG_CONF_OPTS) io.c -o $(PKG_BIN)/usr/bin/io
 	$(SYSDRV_CROSS)-strip -s $(PKG_BIN)/usr/bin/io
 	$(call MAROC_COPY_PKG_TO_SYSDRV_OUTPUT, $(SYSDRV_DIR_OUT_ROOTFS), $(CURRENT_DIR)/$(PKG_BIN))
+
+tool_wpa_supplicant:
+	$(MAKE) -C $(PKG_DEP_WPA_SUPPLICANT)
 
 tool_picocom:
 	$(MAKE) -C $(PKG_DEP_PICOCOM)
@@ -48,3 +52,4 @@ distclean:
 	$(MAKE) -C $(PKG_DEP_IPERF3) distclean
 	$(MAKE) -C $(PKG_DEP_OPENSSL) distclean
 	$(MAKE) -C $(PKG_DEP_ZLIB) distclean
+	$(MAKE) -C $(PKG_DEP_WPA_SUPPLICANT) distclean
