--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
@@ -161,6 +161,11 @@
 	status = "okay";
 	pinctrl-0 = <&i2c3m1_xfer>;
 	clock-frequency = <100000>;
+	
+	rtc@68 {
+		compatible = "dallas,ds1307";
+		reg = <0x68>;
+	};
 };
 
 /**********SPI**********/
