--- a/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
+++ b/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
@@ -322,3 +322,5 @@ CONFIG_DEBUG_FS=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_BT=y
 CONFIG_LEDS_TRIGGER_NETDEV=y
+CONFIG_RTC_DRV_DS1307=y
+CONFIG_RTC_DRV_DS1307_CENTURY=y
