kernel: add rtc pcf8563

--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
@@ -166,6 +166,11 @@
 		compatible = "dallas,ds1307";
 		reg = <0x68>;
 	};
+
+	rtc@51 {
+		compatible = "nxp,pcf8563";
+		reg = <0x51>;
+	};
 };
 
 /**********SPI**********/
