--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-pro-max.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-pro-max.dts
@@ -6,8 +6,7 @@
 /dts-v1/;
 
 #include "rv1106.dtsi"
-#include "rv1106-evb.dtsi"
-#include "rv1106-luckfox-pico-pro-max-ipc.dtsi"
+#include "rv110x-luckfox-pico.dtsi"
 
 / {
 	model = "Luckfox Pico Max";
