--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv110x-luckfox-pico.dtsi
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv110x-luckfox-pico.dtsi
@@ -3,6 +3,7 @@
  * Copyright (c) 2022 Rockchip Electronics Co., Ltd.
  */
 #include "rv1106-amp.dtsi"
+#include "rv1106-evb.dtsi"
 
 / {
 	chosen {
@@ -54,7 +55,7 @@
 			gpios = <&gpio3 RK_PC6 GPIO_ACTIVE_HIGH>;
 			linux,default-trigger = "activity";
 			default-state = "on";
-    	};	
+		};	
 	};
 };
 
@@ -89,7 +90,7 @@
 				remote-endpoint = <&sc3336_out>;
 				data-lanes = <1 2>;
 			};
-
+/*
 			csi_dphy_input1: endpoint@1 {
 				reg = <1>;
 				remote-endpoint = <&sc4336_out>;
@@ -101,6 +102,7 @@
 				remote-endpoint = <&sc530ai_out>;
 				data-lanes = <1 2>;
 			};
+*/
 		};
 
 		port@1 {
@@ -142,7 +144,7 @@
 			};
 		};
 	};
-
+/*
 	sc4336: sc4336@30 {
 		compatible = "smartsens,sc4336";
 		status = "okay";
@@ -184,6 +186,7 @@
 			};
 		};
 	};
+*/
 };
 
 &i2s0_8ch {
@@ -222,9 +225,6 @@
 	};
 };
 
-&pwm0 {
-	status = "okay";
-};
 
 &rkcif {
 	status = "okay";
@@ -273,20 +273,33 @@
 	vref-supply = <&vcc_1v8>;
 };
 
-&sdmmc {
-	max-frequency = <50000000>;
-	no-sdio;
-	no-mmc;
-	bus-width = <4>;
-	cap-mmc-highspeed;
-	cap-sd-highspeed;
-	disable-wp;
-	pinctrl-names = "default";
-	pinctrl-0 = <&sdmmc0_clk &sdmmc0_cmd &sdmmc0_det &sdmmc0_bus4>;
-	status = "okay";
-};
+//&sfc {
+//	status = "okay";
+
+//	flash@0 {
+//		compatible = "spi-nand";
+//		reg = <0>;
+//		spi-max-frequency = <80000000>;
+//		spi-rx-bus-width = <4>;
+//		spi-tx-bus-width = <1>;
+//	};
+//};
+
+// &sdmmc {
+// 	max-frequency = <50000000>;
+// 	no-sdio;
+// 	no-mmc;
+// 	bus-width = <4>;
+// 	cap-mmc-highspeed;
+// 	cap-sd-highspeed;
+// 	disable-wp;
+// 	pinctrl-names = "default";
+// 	pinctrl-0 = <&sdmmc0_clk &sdmmc0_cmd &sdmmc0_det &sdmmc0_bus4>;
+// 	status = "okay";
+// };
 
 &tsadc {
 	status = "okay";
 };
+
 
