--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-mini-b.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-mini-b.dts
@@ -6,8 +6,7 @@
 /dts-v1/;
 
 #include "rv1103.dtsi"
-#include "rv1106-evb.dtsi"
-#include "rv1103-luckfox-pico-mini-ipc.dtsi"
+#include "rv110x-luckfox-pico.dtsi"
 
 / {
 	model = "Luckfox Pico Mini B";
