--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico.dts
@@ -6,8 +6,7 @@
 /dts-v1/;
 
 #include "rv1103.dtsi"
-#include "rv1106-evb.dtsi"
-#include "rv1103-luckfox-pico-ipc.dtsi"
+#include "rv110x-luckfox-pico.dtsi"
 
 / {
 	model = "Luckfox Pico";
@@ -105,7 +104,30 @@
 };
 
 
+//&sfc {
+//	status = "okay";
 
+//	flash@0 {
+//		compatible = "spi-nand";
+//		reg = <0>;
+//		spi-max-frequency = <80000000>;
+//		spi-rx-bus-width = <4>;
+//		spi-tx-bus-width = <1>;
+//	};
+//};
+
+&sdmmc {
+	max-frequency = <50000000>;
+	no-sdio;
+	no-mmc;
+	bus-width = <4>;
+	cap-mmc-highspeed;
+	cap-sd-highspeed;
+	disable-wp;
+	pinctrl-names = "default";
+	pinctrl-0 = <&sdmmc0_clk &sdmmc0_cmd &sdmmc0_det &sdmmc0_bus4>;
+	status = "okay";
+};
 
 
 
