kernel: 删除无关配置文件

--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1103g-luckfox-pico-plus.dts
@@ -151,9 +151,10 @@
 //	status = "disabled";
 //};
 
-//&usbdrd_dwc3 {
-//	status = "disabled";
-//};
+&usbdrd_dwc3 {
+	status = "okay";
+	dr_mode = "host";
+};
 
 //&u2phy {
 //	status = "disabled";
