--- a/project/app/rkipc2/src/rv1103_ipc/rkipc-300w.ini
+++ b/project/app/rkipc2/src/rv1103_ipc/rkipc-300w.ini
@@ -1,20 +1,3 @@
-[audio.0]
-enable = 0
-card_name = hw:0,0
-encode_type = G711A
-format = S16
-sample_rate = 8000
-channels = 2
-frame_size = 1152
-bit_rate = 16000
-input = mic_in
-volume = 50
-enable_aed = 0
-enable_bcd = 0
-enable_vqe = 1
-vqe_cfg = /oem/usr/share/vqefiles/config_aivqe.json
-rt_audio_period_size = 1024
-
 [video.source]
 enable_aiq = 1
 enable_vo = 0
@@ -285,7 +268,7 @@ zoom_level = 0
 focus_level = 0
 
 [storage]
-mount_path = /userdata
+mount_path = /mnt/nfs/1103/jpeg
 free_size_del_min = 500; MB
 free_size_del_max = 1000; MB
 num_limit_enable = 1; limit by file num
