--- a/media/libiconv/Makefile
+++ b/media/libiconv/Makefile
@@ -28,4 +28,4 @@ all:
 	$(call MAROC_COPY_PKG_TO_MEDIA_OUTPUT, $(RK_MEDIA_OUTPUT), $(BUILD_TARGET_OUT))
 
 distclean:
-	-rm -rf ${BUILD_TARGET_OUT} ${BUILD_TARGET_OUT}
+	-rm -rf ${BUILD_TARGET_OUT} ${BUILD_TARGET_OUT} ${BUILD_TARGET_DIR}
