rootfs: 添加prce2 优化makefile

--- a/sysdrv/tools/board/nginx/Makefile
+++ b/sysdrv/tools/board/nginx/Makefile
@@ -9,17 +9,30 @@ BUILD_TARGET := ${CURRENT_DIR}/nginx-1.26.2.tar.gz
 BUILD_TARGET_DIR := ${CURRENT_DIR}/nginx-1.26.2
 BUILD_TARGET_OUT := ${CURRENT_DIR}/out
 
-all:
+LIB_OPENSSL=../toolkits/openssl/
+LIB_PRCE2=../prce2/
+LIB_ZLIB=../toolkits/zlib/
+
+all:lib_openssl lib_prce2 lib_zlib
 	@test -f $(BUILD_TARGET_OUT)/bin/screen || ( \
 		rm -rf ${BUILD_TARGET_DIR} ${BUILD_TARGET_OUT}; \
 		tar -xf ${BUILD_TARGET}; \
 		mkdir -p $(BUILD_TARGET_OUT); \
 		pushd $(BUILD_TARGET_DIR)/; \
 			./configure --prefix=${BUILD_TARGET_OUT}; \
-			make -j$(SYSDRV_JOBS) CC=${SYSDRV_CROSS}-gcc; \
-			make install CC=${SYSDRV_CROSS}-gcc; \
+			make -j$(SYSDRV_JOBS); \
+			make install; \
 		popd;)
 # cp -rfp $(BUILD_TARGET_OUT)/bin/screen*  $(SYSDRV_DIR_OUT_ROOTFS)/usr/bin;
+
+lib_openssl:
+	make -C ${LIB_OPENSSL}
+
+lib_prce2:
+	make -C ${LIB_PRCE2}
+
+lib_zlib:
+	make -C ${LIB_ZLIB}
 
 clean: distclean
 
