--- a/sysdrv/tools/board/toolkits/zlib/Makefile
+++ b/sysdrv/tools/board/toolkits/zlib/Makefile
@@ -43,7 +43,9 @@ all:
 		make -j$(SYSDRV_JOBS) > /dev/null || exit -1; \
 		make install > /dev/null; \
 	popd; )
-	cp -rfp $(CURRENT_DIR)/$(PKG_BIN)/lib/libz.so*  $(SYSDRV_DIR_OUT_ROOTFS)/usr/lib
+	test -z "$(SYSDRV_DIR_OUT_ROOTFS)" || ( \
+		cp -rfp $(CURRENT_DIR)/$(PKG_BIN)/lib/libz.so*  $(SYSDRV_DIR_OUT_ROOTFS)/usr/lib \
+	)
 
 clean: distclean
 
